--- a/app/(auth)/Layout.module.css
+++ b/app/(auth)/Layout.module.css
@@ -13,7 +13,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    transform: translateX(-15%);
+    background-position: center;
     background-size: cover;
     z-index: 1;
 }
